--- a/yingwenyemian.html
+++ b/yingwenyemian.html
@@ -134,28 +134,28 @@
 					</ul>
 				</header>
 				<div>
-					<div>
-						<article>
+					<div class="box10">
+						<article class="aa1">
 							<a href="#">
-								<img src="./images/product1.jpg">
+								<img src="./images/product1.jpg" width="50px" hieght="50px">
 							</a>
 							<div>
 								<a href="#">News Tittle goes here</a>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
 						</article>
-						<article>
+						<article  class="aa2">
 							<a href="#">
-								<img src="./images/product1.jpg">
+								<img src="./images/product1.jpg"  width="50px" hieght="50px">
 							</a>
 							<div>
 								<a href="#">News Tittle goes here</a>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
 						</article>
-						<article>
+						<article  class="aa3">
 							<a href="#">
-								<img src="./images/product1.jpg">
+								<img src="./images/product1.jpg"  width="50px" hieght="50px">
 							</a>
 							<div>
 								<a href="#">News Tittle goes here</a>
@@ -170,10 +170,15 @@
 
 			</section>	
 
-			<section>
-				<div></div>
-				<p></p>
-
+			<section class="bai">
+				<div class="child"></div>
+				<a href="#">Jonathan Smith</a>	
+				<span>DEF LLC</span>
+				<div class="wenzi">
+					<p>
+						Pellentesque et pulvinar enim. Quisque at tempor ligula. Maecenas augue ante, euismod vitae egestas sit amet, accumsan eu nulla. Nullam tempor lectus a ligula lobortis pretium. Donec ut purus sed tortor malesuada venenatis eget eget lorem.
+					</p>
+				</div>
 
 
 
@@ -198,11 +203,11 @@
 
 
 
-		<script>
+		<!--<script>
 			function fresh(){
 				window.location.reload();
 			};
-			setTimeout('fresh()', 6000);
-		</script>
+			setTimeout('fresh()', 10000);
+		</script>-->
 </body>
 </html>
