--- a/yingwenyemian.html
+++ b/yingwenyemian.html
@@ -164,10 +164,6 @@
 						</article>
 					</div>
 				</div>	
-
-
-
-
 			</section>	
 
 			<section class="bai">
@@ -180,27 +176,65 @@
 					</p>
 				</div>
 
-
-
 			</section>
-
-
-
-
-
-
-
-
-
 		</div>
 
+<!--fff-->
+		<div class="contant">
+			<div class="contant1">
+				<h2>RECENT WORK</h2>
+				<div class="can"></div>
+				<div class="can"></div>
+				<div class="can"></div>
+				<div class="can"></div>
+				<a href="#" class="arrow" id="prve">&lt;</a>
+				<a href="#" class="arrow" id="next">&gt;</a>
+			</div>
+		</div>
 
+<!--ddd-->
+	<div class="container">
+		<div class="container1">
+			<h1>
+				“And here i am using my own lungs like a sucker. How is education supposed to make 
+				<br />
+				                     me feel smarter?”
+			</h1>
+		</div>
+	</div>
 
-
-
-
-
-
+<!--ggg-->
+	<div class="logo">
+		<div class="logo1">
+			<ul>
+				<li>
+					<a href="#">
+						<img src="images/logo1.png" alt="" />
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="images/logo2.png" alt="" />
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="images/logo3.png" alt="" />
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="images/logo4.png" alt="" />
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="images/logo5.png" alt="" />
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 
 
 		<!--<script>
