--- a/yingwenyemian.html
+++ b/yingwenyemian.html
@@ -235,7 +235,46 @@
 			</ul>
 		</div>
 	</div>
-
+<!-- hhh -->
+	<footer>
+		<div>
+			<div>
+				<ul>
+					<li>
+						<h1>CONTACT INFO</h1>
+					</li>
+					<li>
+						<p>Address: No.28-63877 street</p>
+					</li>
+					<li>
+						<p>lorem ipsum city, Country</p>
+					</li>
+					<li>
+						<p>Phone : (123) 456-7890</p>
+					</li>
+					<li>
+						<p>Fax : (123) 456-7890</p>
+					</li>
+					<li>
+						<p>
+							Email : 
+							<a href="#">
+								support@vectorlab.com
+							</a>
+						</p>
+					</li>
+				</ul>
+			</div>
+			<div>
+				<h1>LATEST TWEET</h1>
+				<p> - Collect from </p>
+				<a href="#">模板之家</a>
+				<p>More Templates</p>
+				<a href="#">模板之家</a>
+			</div>
+			<div></div>
+		</div>
+	</footer>
 
 		<!--<script>
 			function fresh(){
