--- a/yingwenyemian.html
+++ b/yingwenyemian.html
@@ -236,9 +236,9 @@
 		</div>
 	</div>
 <!-- hhh -->
-	<footer>
-		<div>
-			<div>
+	<footer class="footer">
+		<div class="div"> 
+			<div class="div1">
 				<ul>
 					<li>
 						<h1>CONTACT INFO</h1>
@@ -258,21 +258,65 @@
 					<li>
 						<p>
 							Email : 
-							<a href="#">
+							<a href="#" class="redt">
 								support@vectorlab.com
 							</a>
 						</p>
 					</li>
 				</ul>
 			</div>
-			<div>
+			<div class="div2">
 				<h1>LATEST TWEET</h1>
 				<p> - Collect from </p>
 				<a href="#">模板之家</a>
 				<p>More Templates</p>
 				<a href="#">模板之家</a>
 			</div>
-			<div></div>
+			<div class="div3">
+				<h2>STAY CONNECTED</h2>
+				<ul>
+					<li>
+						<a href="#">
+							<img src="images/1.png" alt="" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/2.png" alt="" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/3.png" alt="" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/4.png" alt="" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/5.png" alt="" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/6.png" alt="" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/7.png" alt="" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/8.png" alt="" />
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</footer>
 
